--- a/example/management/index.html
+++ b/example/management/index.html
@@ -68,6 +68,16 @@
             <td><button onclick="test_set_process_stats_monitoring('router1', 0)">Disable Process Stats Monitoring</button></td>
          </tr>
 
+         <tr>
+            <td>Start Manhole on Router with ID 'router1'.</td>
+            <td><button onclick="test_start_manhole('router1')">Start Manhole</button></td>
+         </tr>
+
+         <tr>
+            <td>Stop Manhole on Router with ID 'router1'.</td>
+            <td><button onclick="test_stop_manhole('router1')">Stop Manhole</button></td>
+         </tr>
+
 
 
          <tr>
@@ -159,7 +169,7 @@
                'on_shutdown',
 
                'on_router_starting',
-               'on_router_started',
+               //'on_router_started',
                'on_router_stopping',
                'on_router_stopped',
 
@@ -174,6 +184,12 @@
                   function (args, kwargs) {
                      console.log(uri, args, kwargs);
                   });
+            });
+
+            session.subscribe('crossbar.node.' + nodename + '.on_router_started', function (args, kwargs) {
+               var worker_id = args[0].id;
+               console.log("router started", worker_id);
+               subscriber_router_events(worker_id);
             });
          };
 
@@ -192,7 +208,7 @@
                function (workers) {
                   workers.forEach(function (worker) {
                      if (worker.type === 'router' || worker.type === 'container') {
-                        session.subscribe('crossbar.node.' + nodename + '.process.' + worker.id + '.on_cpu_affinity_set',
+                        session.subscribe('crossbar.node.' + nodename + '.worker.' + worker.id + '.on_cpu_affinity_set',
                            function (args) {
                               console.log("CPU affinity set on worker " + worker.id, args[0].affinity);
                            })
@@ -212,7 +228,8 @@
 
             var tb = err.args[1]; // traceback
             if (tb && Array.isArray(tb)) {
-               tb.forEach(function (line) {
+               tb.forEach(function (log_entry) {
+                  var line = log_entry[2];
                   console.log(line);
                })
             }            
@@ -256,6 +273,25 @@
          }
 
 
+         function subscriber_router_events(worker_id) {
+            // worker topics
+            //
+            var topics = [
+               'on_manhole_starting',
+               'on_manhole_started',
+               'on_manhole_stopping',
+               'on_manhole_stopped',
+            ];
+            topics.forEach(function (topic) {
+               var uri = 'crossbar.node.' + nodename + '.worker.' + worker_id + '.' + topic;
+               session.subscribe(uri,
+                  function (args, kwargs) {
+                     console.log(uri, args, kwargs);
+                  });
+            });            
+         }
+
+
          function test_start_router(worker_id) {
 
             var options = {
@@ -283,6 +319,9 @@
                         var stats = args[0];
                         console.log('Process stats:', worker_id, stats);
                      });
+
+                  subscriber_router_events(worker_id);
+
                },
                logerr,
                function (progress) {
@@ -521,7 +560,7 @@
 
             var reload = true;
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.container.start_component', [config, reload])
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.container.start_component', [config, reload])
                .then(
                   function (id) {
                      console.log("container component started with ID", id);
@@ -536,7 +575,7 @@
 
 
          function test_stop_container_component_1(worker_id, component_id) {
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.container.stop_component', [component_id])
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.container.stop_component', [component_id])
                .then(
                   function () {
                      console.log("container component stopped");
@@ -552,7 +591,7 @@
          function test_restart_container_component_1(worker_id, component_id) {
             var reload_modules = true;
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.container.restart_component', [component_id, reload_modules])
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.container.restart_component', [component_id, reload_modules])
                .then(
                   function (res) {
                      console.log("container component restarted", res);
@@ -567,7 +606,7 @@
 
 
          function test_list_container_components(worker_id) {
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.container.get_components').then(
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.container.get_components').then(
                function (component) {
                   console.log("" + component.length + " components running")
                   component.forEach(function (component) {
@@ -580,7 +619,7 @@
             );
          }
 
-         function test_start_manhole_1(worker_id) {
+         function test_start_manhole(worker_id) {
             var config = {
                "endpoint": {
                   "type": "tcp",
@@ -594,35 +633,32 @@
                ]
             };
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.start_manhole', [config])
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.start_manhole', [config], {}, {receive_progress: true})
                .then(
-                  function (res) {
-                     console.log("manhole started", res);
+                  function (info) {
+                     console.log("manhole started", info);
                   },
-                  function (err) {
-                     console.log(err.error);
-                     console.log(err.args[0]);
+                  logerr,
+                  function (progress) {
+                     console.log('progress', progress);
                   }
                );
          }
 
-         function test_stop_manhole_1(worker_id) {
+         function test_stop_manhole(worker_id) {
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.stop_manhole')
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.stop_manhole')
                .then(
                   function (res) {
                      console.log("manhole stopped", res);
                   },
-                  function (err) {
-                     console.log(err.error);
-                     console.log(err.args[0]);
-                  }
+                  logerr
                );
          }
 
          function test_get_cpu_affinity_1(worker_id) {
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.get_cpu_affinity')
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.get_cpu_affinity')
                .then(
                   function (res) {
                      console.log("current CPU affinity", res);
@@ -638,7 +674,7 @@
 
             var affinity = [1, 3, 5, 23, 11];
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.set_cpu_affinity', [affinity])
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.set_cpu_affinity', [affinity])
                .then(
                   function (res) {
                      console.log("new CPU affinity", res);
@@ -654,7 +690,7 @@
 
             var paths = ["/tmp", "../../v1", "../../foobar"];
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.add_pythonpath', [paths])
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.add_pythonpath', [paths])
                .then(
                   function (res) {
                      console.log("python paths added", res);
@@ -670,7 +706,7 @@
 
          function test_get_pinfo(worker_id) {
 
-            session.call('crossbar.node.' + nodename + '.process.' + worker_id + '.get_pinfo')
+            session.call('crossbar.node.' + nodename + '.worker.' + worker_id + '.get_pinfo')
                .then(
                   function (res) {
                      console.log(res);
