--- a/example/management/index.html
+++ b/example/management/index.html
@@ -295,7 +295,7 @@
          function test_start_router(worker_id) {
 
             var options = {
-               debug: true,
+               debug: false,
                python: '/home/oberstet/pypy23/bin/pypy',
                traceback: 100
             };
